🐞 [API] Fixed Api bugs
