# config/packages/nelmio_api_doc_components.yaml
@@ -16,15 +16,29 @@ nelmio_api_doc:
                         default: 1
                 order:
                     name: 'order'
-                    description: 'Set to (asc) or (desc) to sort with ascending/descending order by created_at property'
+                    description: 'Set to (asc) or (desc) to sort with ascending/descending order by orderBy property'
                     in: 'query'
                     schema:
                         type: int
                         default: 'asc'
                         pattern: 'asc|desc'
+                orderBy:
+                    name: 'orderBy'
+                    description: 'Set to sort the result by orderBy property'
+                    in: 'query'
+                    schema:
+                        type: int
+                        default: 'createdAt'
                 filter:
                     name: 'filter'
-                    description: 'Set to filter by username property'
+                    description: 'Set to filter by filterBy property'
+                    in: 'query'
+                    schema:
+                        type: string
+                        default: null
+                filterBy:
+                    name: 'filterBy'
+                    description: 'Set to filter the result by the filterBy property'
                     in: 'query'
                     schema:
                         type: string
